--- a/changelog/breaking-deprecations/breaking-changes.mdx
+++ b/changelog/breaking-deprecations/breaking-changes.mdx
@@ -1,233 +1,217 @@
 ---
 title: "Breaking Changes & Migration Notes"
-description: "Clearly lists all breaking changes introduced in significant releases, with guidance on how to adapt existing tests and projects. Helps maintainers plan safe migrations in advance."
+description: "A comprehensive list of changes that may affect current usage, including adjustments to APIs, defaults, and supported platforms. Includes clear migration instructions and before/after code examples to streamline the upgrade process."
 ---
 
 # Breaking Changes & Migration Notes
 
-This page clearly lists all breaking changes introduced in significant releases of GoogleMock. It provides detailed guidance on adapting existing tests and projects, empowering maintainers to plan safe migrations in advance and ensure smooth upgrades.
+This page provides a comprehensive list of breaking changes and migration instructions relevant to updating GoogleMock. These changes may include modifications to mocking macros, alterations in default behaviors, updates in API usage patterns, and refinements to supported platforms or compiler requirements. Understanding and applying these migration notes will help you smoothly upgrade your tests and maintain compatibility with the latest GoogleMock releases.
 
 ---
 
-## 1. Introduction
+## 1. Mock Method Declaration Changes
 
-When upgrading GoogleMock to a new major or notable minor version, it is critical to understand any breaking changes that may impact your tests. This guide highlights these changes and provides actionable migration instructions to minimize test disruptions and maintain test reliability.
+### Transition from `MOCK_METHODn` to Generic `MOCK_METHOD`
 
----
+GoogleMock has deprecated the old family of macros (`MOCK_METHODn`, `MOCK_CONST_METHODn`, etc.) in favor of the new unified `MOCK_METHOD` macro introduced in 2018. This new macro improves flexibility and handles qualifiers and overloads more cleanly.
 
-## 2. Key Breaking Changes by Version
-
-### 2.1 Migration from Legacy MOCK_METHODn Macros to MOCK_METHOD
-
-**Description:**
-- The legacy family of macros `MOCK_METHODn`, `MOCK_CONST_METHODn`, and their variants with `_T` and `_WITH_CALLTYPE` suffixes have been superseded by the unified `MOCK_METHOD` macro.
-- The newer `MOCK_METHOD` macro standardizes mock method declarations and supports additional qualifiers robustly.
-
-**Impact:**
-- Existing mocks using legacy macros might fail to compile in newer GoogleMock versions.
-- Method signatures requiring `const`, `override`, `noexcept`, or reference qualifiers should be updated to use the correct `MOCK_METHOD` syntax.
-
-**Migration Guide:**
-- Replace legacy macros with `MOCK_METHOD` according to the new syntax:
+#### Migration Example:
 
 ```cpp
-// Old:
+// Old style (deprecated)
 MOCK_METHOD1(Foo, bool(int));
-MOCK_CONST_METHOD1(Foo, bool(int));
+MOCK_CONST_METHOD1(Bar, int(int));
 
-// New:
-MOCK_METHOD(bool, Foo, (int), (override));
-MOCK_METHOD(bool, Foo, (int), (const, override));
+// New preferred style
+MOCK_METHOD(bool, Foo, (int));
+MOCK_METHOD(int, Bar, (int), (const));
 ```
 
-- Parentheses are required around parameter lists in the new macro.
-- Use `(const)`, `(override)`, or other qualifiers as needed in the fourth parameter.
-- For methods with commas in return or parameter types, wrap the type in parentheses.
+**Tip:** Wrap return or argument types with commas in parentheses or use type aliases to avoid parsing errors.
 
+### Explicit Qualifiers and Override Annotations
 
-### 2.2 Strict Enforcement of EXPECT_CALL Clause Order and Syntax
-
-**Description:**
-- `EXPECT_CALL` clauses must follow a strict order for chained modifiers (e.g., `.With()`, `.Times()`, `.InSequence()`, `.After()`, `.WillOnce()`, `.WillRepeatedly()`, `.RetiresOnSaturation()`).
-- The `.With()` clause is now required to be the first modifier and can appear at most once.
-- `.Times()` must appear before `.InSequence()`, `.After()`, `.WillOnce()`, `.WillRepeatedly()`, `.RetiresOnSaturation()`.
-- Using modifiers out of order will cause runtime errors/assertions.
-
-**Impact:**
-- Tests using incorrect chaining or ordering of these clauses will fail during execution.
-
-**Migration Guide:**
-- Review your `EXPECT_CALL` statements and ensure modifiers are chained in the prescribed order.
-- Place `.With()` immediately after `EXPECT_CALL(...)` if used.
-- Place `.Times()` before `.InSequence()`, `.After()`, and action clauses.
-
-Example corrected usage:
+The new `MOCK_METHOD` requires explicit specification of method qualifiers like `const`, `override`, and `noexcept` as the optional fourth parameter.
 
 ```cpp
-EXPECT_CALL(mock_obj, Method(_))
-  .With(SomeMatcher())
-  .Times(3)
-  .InSequence(seq)
-  .WillOnce(Return(true))
-  .WillRepeatedly(Return(false))
-  .RetiresOnSaturation();
+MOCK_METHOD(void, Func, (int), (const, override));
 ```
 
-
-### 2.3 Default Cardinality Inference Changes
-
-**Description:**
-- Cardinality (i.e., number of expected calls) inference rules when `.Times()` is omitted have been clarified and standardized.
-
-**Impact:**
-- Tests that omit `.Times()` may behave differently if multiple `.WillOnce()` or `.WillRepeatedly()` clauses are used.
-
-**Migration Guide:**
-- Explicitly specify `.Times()` clauses when you want strict control.
-- Know that:
-  - With no `.WillOnce()` or `.WillRepeatedly()`, `.Times(1)` is inferred.
-  - With *n* `WillOnce()` and no `WillRepeatedly()`, `.Times(n)` is inferred.
-  - With *n* `WillOnce()` and one `WillRepeatedly()`, `.Times(AtLeast(n))` is inferred.
-
-
-### 2.4 Enforcement of `.WillRepeatedly()` Usage
-
-**Description:**
-- `.WillRepeatedly()` can only be used at most once per expectation and must appear after all `.WillOnce()` clauses.
-
-**Impact:**
-- Tests that specify multiple `.WillRepeatedly()` clauses or out-of-order calls will fail.
-
-**Migration Guide:**
-- Refactor chained actions to have a single `.WillRepeatedly()` clause last.
-- All `.WillOnce()` clauses must come before `.WillRepeatedly()`.
-
-
-### 2.5 Macros Handle Commas in Types More Robustly
-
-**Description:**
-- `MOCK_METHOD` now requires wrapping return types or argument types that have commas (e.g., `std::pair<int, int>`) in parentheses or using type aliases to avoid macro parsing errors.
-
-**Impact:**
-- Code failing to wrap such types in parentheses will not compile.
-
-**Migration Guide:**
-- Wrap complex types with parentheses when used as return or parameter types:
-
-```cpp
-MOCK_METHOD((std::pair<int, int>), GetPair, ());
-```
-
-- Alternatively, define type aliases:
-
-```cpp
-using PairInt = std::pair<int, int>;
-MOCK_METHOD(PairInt, GetPair, ());
-```
-
-
-### 2.6 StrictMock, NiceMock, NaggyMock Limitations
-
-**Description:**
-- These wrappers only work correctly for mock methods defined directly with `MOCK_METHOD` in the mock class itself.
-- Wrapping mocks that contain methods mocked in base classes may cause uninteresting calls not to be detected or suppressed.
-- Virtual destructors are required for these wrappers to function correctly.
-
-**Impact:**
-- Tests wrapping mocks without virtual destructors or with base-class-defined mocks may experience inconsistent behavior regarding uninteresting call handling.
-
-**Migration Guide:**
-- Ensure all mocked methods are declared with `MOCK_METHOD` directly in the actual mock class.
-- Add virtual destructors to mock classes where missing.
-- Avoid nesting these wrappers (e.g., `NiceMock<StrictMock<MockFoo>>`).
-
-
-### 2.7 Handling of Uninteresting Calls and Warnings
-
-**Description:**
-- By default, uninteresting calls (mock method calls with no `EXPECT_CALL` expectations) produce warnings.
-- The verbosity and strictness of warnings can be controlled with `NiceMock` (suppress warnings), `NaggyMock` (default, show warnings), and `StrictMock` (fail on uninteresting calls).
-
-**Impact:**
-- Tests relying on uninteresting calls without proper expectation setup may receive warnings or failures unexpectedly after upgrading.
-
-**Migration Guide:**
-- If warnings are unwanted, wrap mocks in `NiceMock<>`.
-- Explicitly specify `EXPECT_CALL` with `Times(AnyNumber())` for methods you expect but do not want to verify.
-
-
-### 2.8 Calling Conventions Support
-
-**Description:**
-- Support for specifying calling conventions in mocked methods using `Calltype(...)` syntax.
-
-**Impact:**
-- Previously, calltype needed legacy macro variants; now, `MOCK_METHOD` supports it via qualifiers.
-
-**Migration Guide:**
-- Update mocks to use the `MOCK_METHOD` macro with `Calltype` qualifier:
-
-```cpp
-MOCK_METHOD(bool, Foo, (int n), (Calltype(STDMETHODCALLTYPE)));
-```
-
-
-### 2.9 Ref-Qualified Methods Support
-
-**Description:**
-- Support for mocking methods with `&` and `&&` reference qualifiers using the `ref(...)` specifier.
-
-**Impact:**
-- Newly introduced or previously unsupported ref-qualified methods require qualifier syntax.
-
-**Migration Guide:**
-- Add `ref(&)` or `ref(&&)` qualifiers as applicable:
-
-```cpp
-MOCK_METHOD(int, RefQualifiedMethod, (), (const, ref(&), override));
-```
-
-
-### 2.10 Verifying and Clearing Expectations and Default Actions
-
-**Description:**
-- APIs `Mock::VerifyAndClearExpectations()` and `Mock::VerifyAndClear()` provide programmatic verification and clearing of expectations and default actions.
-
-**Impact:**
-- Helps in tests managing mock lifetimes manually, ensuring timely verification.
-
-**Migration Guide:**
-- Use these APIs to verify mocks before destruction when the lifetime is not fully controlled.
-
-
-## 3. Common Migration Pitfalls
-
-- Setting expectations (`EXPECT_CALL`) after exercising the mock leads to undefined behavior.
-- Mixing legacy and new macros inconsistently may cause compile errors.
-- Failing to wrap complex types with parentheses in `MOCK_METHOD` usage breaks the build.
-- Violating the order of expectation modifier chaining causes run-time assertions.
-- Attempting nested `NiceMock`/`StrictMock` wrappers or wrapping mocks with base-class mocks breaks strictness policies.
-
-
-## 4. Practical Migration Tips
-
-- Start by updating all `MOCK_METHODn` macros to modern `MOCK_METHOD` with proper qualifiers.
-- Audit `EXPECT_CALL` chains for modifier order compliance.
-- Use `NiceMock` or `StrictMock` wrappers wisely to control uninteresting call reporting.
-- Check that destructors in mocked classes are virtual.
-- Use type aliases and parentheses to guard against macro parsing problems with complex types.
-- Run your test suite with `--gmock_verbose=info` to inspect call matching and diagnose expectation issues.
-
-
-## 5. Further Resources
-
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) – for recipes on migrating and writing expectations
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) – detailed API documentation
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html) – a quick reference
-- [Nice, Strict, and Naggy Mocks](https://google.github.io/googletest/gmock_nice_strict.html) – control mock call policies
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) – beginner-friendly guide
+Ensure your mock methods specify the correct qualifiers to avoid compilation errors in upgraded code.
 
 ---
 
-By carefully reviewing these breaking changes and following the migration instructions, you can ensure your tests remain stable and effective as you upgrade GoogleMock.
+## 2. Changes in Expectation and Behavior Macros
 
+### ON_CALL and EXPECT_CALL Syntax Refinements
+
+- The chainable clauses `.With()`, `.Times()`, `.InSequence()`, `.After()`, `.WillOnce()`, `.WillRepeatedly()`, and `.RetiresOnSaturation()` remain key elements but must be used respecting their mandatory order.
+- The `.With()` clause can be used only once and must be placed immediately after the macro invocation.
+
+Incorrect chaining order may cause compilation or runtime errors after upgrading.
+
+### Default Cardinality Inference
+
+GoogleMock now infers the expected call count (`Times()`) automatically based on presence or absence of `.WillOnce()` and `.WillRepeatedly()` clauses.
+
+- No `.Times()` and no `.WillOnce()` or `.WillRepeatedly()` means `Times(1)` is assumed.
+- Multiple `.WillOnce()` uses imply a cardinality equal to the count of `.WillOnce()` calls.
+
+Make sure your expectations rely on this inference and explicitly specify `.Times()` only if behavior differs.
+
+---
+
+## 3. Support for Move-Only Types in Mocked Methods
+
+Starting with GoogleMock releases after April 2017, mocking methods that accept or return move-only types (like `std::unique_ptr`) is fully supported.
+
+### Migration Guidance:
+
+- Use `MOCK_METHOD` normally for methods with move-only arguments or return types.
+- When returning move-only types repeatedly, provide callable actions (like lambdas) rather than repeated `Return(std::move(...))` to avoid runtime errors.
+
+Example:
+
+```cpp
+class MockBuzzer : public Buzzer {
+ public:
+  MOCK_METHOD(std::unique_ptr<Buzz>, MakeBuzz, (StringPiece text), (override));
+};
+
+EXPECT_CALL(mock_buzzer, MakeBuzz("hello"))
+    .WillRepeatedly([](StringPiece) {
+        return std::make_unique<Buzz>(AccessLevel::kInternal);
+    });
+```
+
+Legacy workarounds using delegating mock methods are no longer necessary.
+
+---
+
+## 4. Changes in Mock Strictness Behavior
+
+GoogleMock distinguishes between **NiceMock**, **NaggyMock**, and **StrictMock** to control the handling of uninteresting calls.
+
+- **NiceMock** suppresses warnings on uninteresting calls.
+- **NaggyMock** (default) prints warnings on uninteresting calls.
+- **StrictMock** treats uninteresting calls as errors.
+
+Migration to recent versions may change warning or error behavior around uninteresting calls due to improvements in mock strictness handling. Consider reviewing your use of these wrappers and expectations that catch "all" calls with `EXPECT_CALL(...).Times(AnyNumber())`.
+
+---
+
+## 5. Updated Compiler Compatibility and Build Requirements
+
+- GoogleMock now requires a C++17-compatible compiler.
+- When building with MSVC, Visual Studio 2015 (v14.0) or newer is mandatory.
+- On platforms using Clang or GNU compilers, recent versions are recommended to avoid warning or flag issues.
+
+Migration instructions:
+
+- Update your build environment to meet the minimum compiler standards.
+- Adjust your CMake or build scripts to enable C++17 or later.
+- Review compiler and linker flags settings as GoogleMock now overrides some defaults for better compatibility.
+
+Example (CMake):
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
+
+---
+
+## 6. Changes in Threading and Pthread Support
+
+GoogleMock tries to detect pthread support automatically, using CMake's `Threads` package.
+
+- On MinGW platforms, pthreads are disabled by default due to known issues.
+- You can override pthread support detection via `-DGTEST_HAS_PTHREAD=1` or `-DGTEST_HAS_PTHREAD=0` defines.
+
+Ensure your build configuration reflects your threading model to avoid linker errors during migration.
+
+---
+
+## 7. Migration Examples and Before/After Code Snippets
+
+### Mock Method Declaration
+
+**Before:**
+```cpp
+MOCK_CONST_METHOD1(GetSize, int());
+```
+
+**After:**
+```cpp
+MOCK_METHOD(int, GetSize, (), (const));
+```
+
+### Setting Expectations
+
+**Before:**
+```cpp
+EXPECT_CALL(foo, Bar(5))
+    .Times(Exactly(3))
+    .WillRepeatedly(Return(42));
+```
+
+**After:**
+```cpp
+EXPECT_CALL(foo, Bar(5))
+    .Times(3)
+    .WillRepeatedly(Return(42));
+```
+
+### Handling Move-Only Return Types
+
+**Before:**
+```cpp
+EXPECT_CALL(mock_buzzer, MakeBuzz(_))
+    .WillRepeatedly(Return(std::move(unique_buzz)));
+```
+
+**This now causes runtime error (moved-from value).
+
+**Correct After Migration:**
+```cpp
+EXPECT_CALL(mock_buzzer, MakeBuzz(_))
+    .WillRepeatedly([](StringPiece) {
+        return std::make_unique<Buzz>(AccessLevel::kInternal);
+    });
+```
+
+---
+
+## 8. Troubleshooting Common Migration Issues
+
+<Tip>
+If you experience compilation errors related to `MOCK_METHOD` usage or qualifiers, check that your mock method declarations include the correct fourth parameter for qualifiers such as `(const, override)`.
+</Tip>
+
+<Warning>
+Linker errors on Windows related to runtime library mismatches can occur if you mix static and dynamic CRTs. Use the CMake option `gtest_force_shared_crt` carefully to align runtime linking across your project.
+</Warning>
+
+<Check>
+Run your tests with increased verbosity using `--gmock_verbose=info` to see detailed matching and expectation logs aiding migration debugging.
+</Check>
+
+---
+
+## 9. References and Related Documentation
+
+- [Mocking Reference](https://google.github.io/googletest/docs/reference/mocking.html) - Detailed API documentation for mocks, expectations, and behaviors.
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) - Practical recipes and migration tips.
+- [Nice, Naggy, and Strict Mocks](../../guides/mocking-advanced-usage/nice-strict-mocks.md) - Behavioral differences that may impact migration.
+- [CMake Build Instructions](../../getting-started/installation-guides/linux-macos-install.md) - Configure your builds for compatibility.
+- [Supported Platforms](../../docs/platforms.md) - Ensure your environment is supported.
+
+Review these resources to understand the full scope of changes affecting mock usage and integration.
+
+---
+
+**Taking the time to carefully migrate your mocks and tests according to these notes will ensure smooth upgrades and reliable test behavior. Refer frequently to the Mocking Reference and upgrade guides for detailed instructions.**
+
+<Info>
+For assistance, check the FAQ Troubleshooting section and community support channels if you encounter complex migration roadblocks.
+</Info>
