--- a/overview/architecture-concepts/system-architecture.mdx
+++ b/overview/architecture-concepts/system-architecture.mdx
@@ -1,164 +1,174 @@
 ---
-title: "System Architecture"
-description: "Visualize how GoogleTest and GoogleMock interconnect, from test definitions to execution and reporting. Understand the layered structure, major components (like the test runner, assertion engine, and mocking layer), and how they interact. Includes a mermaid diagram summarizing the main flows."
+title: "System Architecture Overview"
+description: "Explore the high-level design of GoogleTest and GoogleMock, including the test discovery and execution process, assertion and matcher flow, and the relationship between GoogleTest and GoogleMock. Includes a mermaid diagram to visualize main components and data flow."
 ---
 
-# System Architecture
+# System Architecture Overview
 
-## Understanding the GoogleTest & GoogleMock Framework Interactions
+## Introduction
 
-Welcome to the System Architecture overview of GoogleTest and GoogleMock. This page helps you visualize the entire journey of your tests — from definitions through execution to reporting — giving you an insightful view of the internal layers and their interactions. Understanding this layered architecture enables you to write more effective tests, troubleshoot with confidence, and appreciate how Google’s C++ testing framework executes your code reliably.
+The System Architecture Overview provides a clear picture of how GoogleTest and GoogleMock work together at a high level. This page is designed to help you understand the flow and relationships among the core components involved in test discovery, execution, assertion evaluation, matcher operation, and how GoogleTest integrates with GoogleMock to help you write and run tests efficiently.
+
+By exploring this overview, you gain a practical understanding of the internal workflows without diving into implementation details. It empowers you to troubleshoot and extend your use of GoogleTest and GoogleMock by seeing how these pieces fit.
 
 ---
 
-### Why Care About The System Architecture?
+## What You Will Learn
 
-Imagine you’re running a complex suite of C++ tests for your application. Beyond writing assertions and test cases, knowing how test definitions move through the framework, how mock expectations are verified, and how results get reported can transform how you design your tests and interpret results.
+- The lifecycle of a test from discovery to execution.
+- How assertions and matchers interact to validate test conditions.
+- The collaboration between GoogleTest and GoogleMock within the testing framework.
+- Visualization of the system components and data flow.
 
-The System Architecture page shows you exactly how key pieces like the test runner, assertion engine, mocking layers, and reporting mechanisms connect and operate cohesively — all while maintaining test isolation, robustness, and clarity.
+---
 
+## High-Level Architecture of GoogleTest and GoogleMock
 
-## GoogleTest and GoogleMock: What Is It?
+GoogleTest is a robust C++ testing framework that handles test discovery, execution, and assertion verification. GoogleMock adds on powerful facilities for creating mock objects and setting expectations on how they should be used.
 
-GoogleTest is a widely adopted C++ testing framework based on the familiar xUnit architecture, supporting extensive assertion types and comprehensive test structuring.
+Together, the two provide comprehensive tools for verifying both state and behavior in your C++ code.
 
-GoogleMock extends GoogleTest by enabling the creation and control of mock objects—allowing precise testing of interactions and dependencies through declarative expectations.
+### Core Components and Flow:
 
-Together, they provide a unified testing and mocking environment to write thoroughly verified, maintainable C++ tests.
+1. **Test Discovery**
+   - GoogleTest automatically locates and registers all test cases and fixtures defined using `TEST`, `TEST_F`, `TEST_P`, and registered programmatically.
 
+2. **Test Execution**
+   - Tests run sequentially unless configured otherwise.
+   - For each test:
+     - Initialization (`SetUpTestSuite`, `SetUp`, `SetUpTestSuite` etc.) occurs.
+     - The actual test code is executed.
+     - Assertions evaluate test conditions.
+     - Clean-up (`TearDown`, `TearDownTestSuite`) runs.
 
-## Core Components and Their Purpose
+3. **Assertion and Matcher Flow**
+   - Assertions such as `EXPECT_EQ` or `ASSERT_TRUE` use matchers to evaluate correctness.
+   - Matchers validate argument values and complex conditions.
+   - Failure messages are constructed dynamically based on matcher results to guide debugging.
 
-At a high-level, the system architecture reveals a layered design that handles:
+4. **GoogleMock Integration**
+   - Mocks are instantiated as specialized test doubles.
+   - Expectations on mock methods are set prior to execution.
+   - When mock methods are invoked, GoogleMock checks if calls match expectations and performs actions.
+   - Violations generate immediate test failures with detailed diagnostics.
 
-- **Test Definitions and Discovery:** Your tests (defined with `TEST()`, `TEST_F()`, mocks, and expectations) are automatically registered and grouped.
-- **Test Runner:** Orchestrates the ordered execution of tests, ensuring isolated environments for each test, managing setup/teardown of fixtures.
-- **Assertion Engine:** Evaluates each assertion’s success or failure and handles fatal versus nonfatal failures to control test flow.
-- **Mocking Layer:** Integrates mock object creation, expectation matching, and call verification, allowing precise behavioral control without manual bookkeeping.
-- **Result Collection and Reporting:** Gathers test outcomes with detailed context to produce comprehensive reports.
+### Workflow Diagram
 
-
-### How Do These Components Interact?
-
-Here is an illustrative Mermaid.js flowchart showing the main interactions and data flow within the GoogleTest and GoogleMock architecture:
+Below is a Mermaid flowchart depicting these core components and their interactions:
 
 ```mermaid
 flowchart TD
-  subgraph Test_Definition
-    TestCode["User's Test & Mock Definitions"]
+  subgraph TestDiscovery
+    TD1[Test Registration]
+    TD2[Test Suite Collection]
+    TD1 --> TD2
   end
 
-  subgraph Registration
-    TestRegistry["Test Registry & Discovery"]
+  subgraph TestExecution
+    TE1[Select Test Suite]
+    TE2[SetUpTestSuite()]
+    TE3[Test Case Execution]
+    TE4[TearDownTestSuite()]
   end
 
-  subgraph Execution
-    TestRunner["Test Runner"]
-    AssertionEngine["Assertion Engine"]
-    MockLayer["Mocking Layer"]
+  subgraph SingleTestExecution
+    ST1[SetUp()]
+    ST2[Execute Test Body]
+    ST3[Assertion & Matcher Evaluation]
+    ST4[TearDown()]
   end
 
-  subgraph Reporting
-    Reporter["Result Collector & Reporter"]
+  subgraph AssertionMatcherFlow
+    AM1[Assertion Macro Invoked]
+    AM2[Evaluate Matcher]
+    AM3[Generate Diagnostic Messages]
   end
 
-  TestCode -->|Register Tests & Mocks| TestRegistry
-  TestRegistry -->|Provide Tests for Execution| TestRunner
+  subgraph GoogleMockIntegration
+    GM1[Mock Object Creation]
+    GM2[Set Expectations]
+    GM3[Method Invocation]
+    GM4[Verify Expectations]
+  end
 
-  TestRunner -->|Execute Test Case| AssertionEngine
-  TestRunner -->|Manage Mocks & Expectations| MockLayer
+  TD2 --> TE1
+  TE1 --> TE2
+  TE2 --> TE3
+  TE3 --> ST1
+  ST1 --> ST2
+  ST2 --> AM1
+  AM1 --> AM2
+  AM2 --> AM3
+  ST2 --> GM1
+  GM1 --> GM2
+  GM2 --> GM3
+  GM3 --> GM4
+  AM3 --> ST3
+  ST3 --> ST4
+  ST4 --> TE4
+  TE4 --> TE1
 
-  AssertionEngine -->|Pass/Fail Signal| Reporter
-  MockLayer -->|Verify Expectations| Reporter
-
-  TestRunner -->|Notify Test Completion| Reporter
-
-  Reporter -->|Final Results| User
-
-  classDef component fill:#f9f9f9,stroke:#333,stroke-width:1px
-  class TestRegistry,TestRunner,AssertionEngine,MockLayer,Reporter component
+  %% Style
+  classDef groupFill fill:#f1f9ff,stroke:#91c9ff,stroke-width:1px;
+  class TestDiscovery,TestExecution,SingleTestExecution,AssertionMatcherFlow,GoogleMockIntegration groupFill;
 ```
 
+---
 
-- **User's Test & Mock Definitions:** When you write tests using `TEST()`, declare mocks with `MOCK_METHOD()`, and set expectations, these definitions get automatically registered.
+## Detailed Explanation of Main Components
 
-- **Test Registry & Discovery:** This layer tracks all registered tests and mocks, enabling the test runner to discover them dynamically without manual enumeration.
+### Test Discovery
 
-- **Test Runner:** Drives the test execution pipeline by creating instances of test fixtures, invoking tests, and managing lifecycle hooks.
+Automatically identifies all tests written using GoogleTest macros. This seamless discovery avoids manual registration and ensures every test declared is considered during execution.
 
-- **Assertion Engine:** At runtime, processes assertions within your test functions and communicates results.
+### Test Execution
 
-- **Mocking Layer:** Implements mocks, controls their behavior, matches method calls against expectations, and verifies their fulfillment.
+Manages the lifecycle of test suites and individual test cases. It runs initialization routines, executes your test code, evaluates assertions, and runs necessary teardown steps. This flow ensures independence and repeatability of tests.
 
-- **Result Collector & Reporter:** Captures all test outcomes and provides detailed failure reports, enabling effective debugging.
+### Assertion and Matcher Handling
 
+Assertions invoke matchers that verify specific conditions or argument patterns. When a failure occurs, detailed diagnostics are generated to help you quickly pinpoint the failure cause.
 
-## Real-World Example
+### GoogleMock Interoperability
 
-Consider you have a test suite verifying a class `Queue`. Each test uses assertions like `EXPECT_EQ` and mocks out dependency classes.
-
-1. You define `TEST_F(QueueTest, IsEmptyInitially)` and mock dependencies.
-2. The test runner discovers this test from the registry.
-3. The runner creates a fresh `QueueTest` fixture instance.
-4. Assertion engine evaluates `EXPECT_EQ` calls in your test; mock layer checks if expected calls to mocks happen.
-5. If a failure occurs, the reporter logs detailed context including line numbers, input state, and mock call info.
-6. After test completion, the runner tears down, preparing for the next test.
-
-Through this systematic flow, GoogleTest and GoogleMock ensure isolated, repeatable, and informative testing.
-
-
-## Practical Tips & Best Practices
-
-- **Leverage Automatic Test Registration:** You don't need manual test lists; define tests and mocks, and the registry handles discovery.
-
-- **Understand Failure Types:** Use `ASSERT_*` macros for fatal failures (stop the current function) and `EXPECT_*` for nonfatal to gather multiple insights in one run.
-
-- **Isolate Mocks Per Test:** Mock objects are managed fresh per test, avoiding side effects across tests.
-
-- **Interpret Reports with Architecture in Mind:** Knowing the flow from assertion engine and mocking verification to final reporting helps decode failure messages.
-
-- **Use Fixtures for Shared Setup:** The runner creates fixtures per test ensuring consistent environments and proper resource management.
-
-
-## Troubleshooting Common Issues
-
-<AccordionGroup title="Troubleshooting Common Scenarios">
-<Accordion title="Why does GoogleTest run tests in a specific order?">
-The test runner executes tests in the order registered, but you should not rely on this order. Each test runs in a fresh fixture to guarantee isolation. If order is meaningful, re-examine to improve test independence.
-</Accordion>
-<Accordion title="My mock expectations aren't verified correctly—what's wrong?">
-Ensure you set expectations **before** exercising mocks in your tests. The mocking layer verifies expectations at test teardown, so late or missing expectations cause failures.
-</Accordion>
-<Accordion title="How can I debug failing assertions with minimal output noise?">
-Use `ASSERT_*` for critical test checkpoints and `EXPECT_*` when you want to continue and see more assertion results. Understanding the assertion engine's handling of failures helps balance thoroughness and noise.
-</Accordion>
-</AccordionGroup>
-
-
-## Getting Started Preview
-
-To explore the system in action:
-
-1. Write your first simple test using the `TEST()` macro.
-2. Use mocks with `MOCK_METHOD()` and set expectations using `EXPECT_CALL()`.
-3. Run tests via `RUN_ALL_TESTS()` and observe detailed output from the reporter.
-
-Once comfortable with this overview, dive deeper into [Test Discovery and Execution Workflow](/guides/getting-started/test-discovery-execution) and [Using Mocks: Patterns and Best Practices](/guides/mocking-and-advanced-techniques/using-mocks) to master the capabilities of GoogleTest and GoogleMock.
-
+Mock objects are integrated natively, enabling behavior verification in tests alongside traditional assertions. GoogleMock tracks method calls, arguments, call order, and frequency to ensure expected interactions.
 
 ---
 
-For the complete walkthrough, refer to related documentation such as the [GoogleTest Primer](https://google.github.io/googletest/primer.html), [Mocking Reference](reference/mocking.md), and [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html).
+## Practical Benefits
 
+Understanding the architecture helps you:
+
+- Write tests that integrate mocks and assertions naturally.
+- Diagnose issues in test execution flows or unexpected mock interactions.
+- Optimize tests by leveraging GoogleTest/GoogleMock lifecycle hooks.
+- Extend the framework with custom matchers, actions, or event listeners.
+
+---
+
+## Best Practices
+
+- Define your test fixtures clearly to benefit from shared setup across tests.
+- Use GoogleMock with GoogleTest to validate complex behavior interactions.
+- Leverage assertion macros with expressive matchers for clear validation.
+- Utilize the hooks (`SetUpTestSuite`, `TearDownTestSuite`) for expensive shared resources.
 
 ---
 
-## References
+## Next Steps
 
-- GoogleTest Primer: Introduction to basic test writing.
-- Mocking Reference: In-depth guidance on defining and using mocks.
-- gmock_main.cc: Entry point showing integration of GoogleMock and GoogleTest initialization.
+After grasping the System Architecture Overview, deepen your mastery by exploring:
 
-<Source url="https://github.com/google/googletest" paths={[{"path": "googlemock/src/gmock_main.cc", "range": "1-57"}]} />
+- [Core Concepts and Terminology](../core-terminology) — understand the key abstractions.
+- [Feature Overview](../feature-overview) — learn about the capabilities available to you.
+- [Writing Your First Tests](../../guides/getting-started-workflows/writing-tests) — take your knowledge into hands-on practice.
+- [Creating and Using Mocks](../../guides/getting-started-workflows/basic-mocking) — integrate mocks effectively.
+
+For reference implementation details and API operations, head to:
+
+- [Testing API Reference](../../api_reference/core_testing_api) for test fixtures, assertions, and execution.
+- [Mocking and Matchers API](../../api_reference/mocking_and_matchers) for mock creation and behavior setup.
 
 ---
+
+By understanding this architecture, you position yourself to write clear, efficient, and maintainable C++ tests with GoogleTest and GoogleMock, accelerating your development and debugging workflows.
